--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/person"
+        android:id="@+id/menuHome"
         android:title="Home"
         android:icon="@drawable/ic_login_foreground"/>
     <item
-        android:id="@+id/home"
+        android:id="@+id/menuCart"
         android:title="Καλάθι"
         android:icon="@drawable/ic_login_foreground"/>
     <item
-        android:id="@+id/settings"
-        android:title="Σύνδεση"
-        android:icon="@drawable/ic_login_foreground"/>
+        android:id="@+id/menuLogin"
+        android:icon="@drawable/ic_login_foreground"
+        android:title="Σύνδεση" />
 </menu>
