--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menuHome"
-        android:title="Home"
-        android:icon="@drawable/ic_login_foreground"/>
+        android:icon="@drawable/ic_home_foreground"
+        android:title="Home" />
     <item
         android:id="@+id/menuCart"
-        android:title="Καλάθι"
-        android:icon="@drawable/ic_login_foreground"/>
+        android:icon="@drawable/ic_cart_foreground"
+        android:title="Cart" />
     <item
         android:id="@+id/menuLogin"
         android:icon="@drawable/ic_login_foreground"
-        android:title="Σύνδεση" />
+        android:title="LogIn" />
 </menu>
