--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/menuHome"
         android:icon="@drawable/ic_home_foreground"
-        android:title="Home" />
+        android:title="@string/menuHome" />
     <item
         android:id="@+id/menuCart"
         android:icon="@drawable/ic_cart_foreground"
-        android:title="Cart" />
+        android:title="@string/menuCart" />
     <item
         android:id="@+id/menuLogin"
         android:icon="@drawable/ic_login_foreground"
-        android:title="LogIn" />
+        android:title="@string/menuLogin" />
 </menu>
