--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="49dp"
         android:onClick="confirm"
-        android:text="CONFIRM"
+        android:text="@string/button_confirm"
         app:layout_constraintEnd_toEndOf="@+id/editTEmail3"
         app:layout_constraintStart_toStartOf="@+id/editTEmail3"
         app:layout_constraintTop_toBottomOf="@+id/editTEmail3" />
@@ -24,7 +24,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="167dp"
         android:ems="10"
-        android:hint="EMAIL"
+        android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="78dp"
-        android:text="Write your email below to send you a new password."
+        android:text="@string/forgot_password_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
