--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="122dp"
         android:onClick="verify"
-        android:text="Press here to send you verification email "
+        android:text="@string/button_send_vemail"
         app:layout_constraintBottom_toBottomOf="@+id/bAlready"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tVerify" />
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:onClick="already"
-        android:text=" have already recieved a verification email"
+        android:text="@string/button_have_vemail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="83dp"
         android:layout_marginTop="96dp"
-        android:text="You need to verify your email"
+        android:text="@string/verify_email_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="You need to verify your email" />
