--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/ic_home_foreground"
         android:title="@string/menuHome" />
     <item
+        android:id="@+id/menuCategories"
+        android:icon="@drawable/ic_categories_foreground"
+        android:title="Categories" />
+    <item
         android:id="@+id/menuCart"
         android:icon="@drawable/ic_cart_foreground"
         android:title="@string/menuCart" />
