--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -23,7 +23,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="33dp"
         android:layout_marginEnd="77dp"
-        android:onClick="@string/button_new_user"
+        android:onClick="bSignUp"
         android:text="@string/button_signup"
         app:layout_constraintEnd_toEndOf="@+id/editTPass"
         app:layout_constraintStart_toStartOf="@+id/bFPass"
