--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -8,6 +8,7 @@
     tools:context=".CategoriesFragment">
 
     <ListView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listView"
         android:layout_width="0dp"
         android:layout_height="0dp"
