--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />
 
     <EditText
-        android:id="@+id/editTextNumber2"
+        android:id="@+id/editTextCCV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
@@ -69,7 +69,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="33dp"
+        android:onClick="finish"
         android:text="FINISH ORDER"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumber2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
+        app:layout_constraintEnd_toEndOf="@+id/editTextCCV"
+        app:layout_constraintTop_toBottomOf="@+id/editTextCCV" />
 </androidx.constraintlayout.widget.ConstraintLayout>
