--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
+        android:maxLength="16"
         android:ems="10"
         android:hint="CREDIT CARD NUMBER"
         android:inputType="number"
@@ -36,7 +37,8 @@
         android:layout_marginTop="289dp"
         android:layout_marginBottom="289dp"
         android:ems="10"
-        android:hint="EXPIRE DATE"
+        android:maxLength="5"
+        android:hint="EXPIRE DATE MM/YY"
         android:inputType="date"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/editTextNumber"
@@ -48,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
         android:ems="10"
+        android:maxLength="3"
         android:hint="CCV"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="@+id/editTextDate"
