--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,15 +5,15 @@
         android:icon="@drawable/ic_home_foreground"
         android:title="@string/menuHome" />
     <item
-        android:id="@+id/menuCategories"
+        android:id="@+id/menuAdd"
         android:icon="@drawable/ic_categories_foreground"
         android:title="Categories" />
     <item
-        android:id="@+id/menuCart"
+        android:id="@+id/menuDelete"
         android:icon="@drawable/ic_cart_foreground"
         android:title="@string/menuCart" />
     <item
-        android:id="@+id/menuLogin"
+        android:id="@+id/menuLogOut"
         android:icon="@drawable/ic_login_foreground"
         android:title="@string/menuLogin" />
 </menu>
