--- a/app/src/main/res/menu/bottom_nav_menu_admin.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_admin.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menuHome"
-        android:icon="@drawable/ic_home_foreground"
-        android:title="Home" />
-    <item
         android:id="@+id/menuAdd"
-        android:icon="@drawable/ic_categories_foreground"
+        android:icon="@android:drawable/ic_input_add"
         android:title="Add" />
     <item
         android:id="@+id/menuDelete"
-        android:icon="@drawable/ic_cart_foreground"
+        android:icon="@android:drawable/ic_menu_delete"
         android:title="Delete" />
     <item
         android:id="@+id/menuLogOut"
