--- a/app/src/main/res/layout/recyclerview_row_delete.xml
+++ b/app/src/main/res/layout/recyclerview_row_delete.xml
@@ -11,44 +11,33 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="51dp"
         android:layout_marginBottom="10dp"
-        android:text="REMOVE FROM CART"
+        android:text="DELETE FROM DATABASE"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewQ"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="13dp"
-        android:text="placeholder"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/priceTextView"
-        app:layout_constraintTop_toBottomOf="@+id/priceTextView" />
 
     <TextView
         android:id="@+id/priceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="24dp"
         android:text="placeholder"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintStart_toStartOf="@+id/button3" />
 
     <TextView
         android:id="@+id/textViewQ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="93dp"
-        android:layout_marginBottom="37dp"
+        android:layout_marginEnd="85dp"
+        android:layout_marginBottom="29dp"
         android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
