--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -7,33 +7,69 @@
     android:layout_height="match_parent"
     tools:context=".AddFragment">
 
-    <EditText
-        android:id="@+id/editCategory"
+    <Button
+        android:id="@+id/buttonQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Category"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="147dp" />
+        android:layout_marginStart="1dp"
+        android:text="SET QUANTITY"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextQuantity"
+        app:layout_constraintEnd_toStartOf="@+id/editTextQuantity"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonPr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="SET PRICE"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextPr"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editItem"
+        android:id="@+id/editTextQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="153dp"
+        android:layout_marginEnd="23dp"
         android:ems="10"
-        android:hint="Category"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="246dp" />
+        android:hint="QUANTITY"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonQuantity"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editItem2"
+        android:id="@+id/editTextPr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="327dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
-        android:hint="Category"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="331dp" />
+        android:hint="PRICE"
+        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewQuantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="78dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewPr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="53dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginBottom="44dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPr"
+        app:layout_constraintEnd_toStartOf="@+id/editTextQuantity"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
