--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -12,8 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:onClick="setQuantity"
-        android:text="SET QUANTITY"
+        android:text="@string/b_set_quantity"
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextQuantity"
         app:layout_constraintEnd_toStartOf="@+id/editTextQuantity"
         app:layout_constraintStart_toStartOf="parent" />
@@ -23,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="SET PRICE"
+        android:text="@string/b_set_price"
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextPr"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -34,7 +33,7 @@
         android:layout_marginTop="153dp"
         android:layout_marginEnd="23dp"
         android:ems="10"
-        android:hint="QUANTITY"
+        android:hint="@string/quantity"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonQuantity"
@@ -47,7 +46,7 @@
         android:layout_marginTop="327dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
-        android:hint="PRICE"
+        android:hint="@string/tprice"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
