--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="36dp"
         android:onClick="Button_Search"
-        android:text="SEARCH"
+        android:text="@string/search"
         app:layout_constraintStart_toStartOf="@+id/editTextTextSearch"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextSearch" />
 
@@ -25,20 +25,9 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="116dp"
         android:ems="10"
-        android:hint="SEARCH"
+        android:hint="@string/search"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
