--- a/app/src/main/res/layout/fragment_log_out.xml
+++ b/app/src/main/res/layout/fragment_log_out.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="140dp"
         android:layout_marginTop="312dp"
         android:onClick="bLogOut"
-        android:text="LOG OUT"
+        android:text="@string/log_out"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
