--- a/app/src/main/res/layout/recyclerview_row_delete.xml
+++ b/app/src/main/res/layout/recyclerview_row_delete.xml
@@ -11,12 +11,10 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginEnd="51dp"
+        android:layout_marginStart="68dp"
         android:layout_marginBottom="10dp"
-        android:text="DELETE FROM DATABASE"
+        android:text="@string/delete_from_database"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textViewQ"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -24,20 +22,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="30dp"
         android:text="placeholder"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="@+id/button3" />
+        app:layout_constraintStart_toStartOf="@+id/button3"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewQ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="85dp"
-        android:layout_marginBottom="29dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="55dp"
         android:text="0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
