--- a/app/src/main/res/layout/recyclerview_row_with_image.xml
+++ b/app/src/main/res/layout/recyclerview_row_with_image.xml
@@ -11,9 +11,9 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/add_to_cart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
@@ -21,22 +21,20 @@
 
     <Button
         android:id="@+id/buttonAdd"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="28dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="84dp"
         android:layout_marginBottom="10dp"
         android:text="+"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonDelete"
-        app:layout_constraintTop_toTopOf="@+id/button3" />
+        app:layout_constraintStart_toEndOf="@+id/buttonDelete" />
 
     <Button
         android:id="@+id/buttonDelete"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="36dp"
         android:text="-"
         app:layout_constraintBottom_toBottomOf="@+id/buttonAdd"
         app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
@@ -47,43 +45,41 @@
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="39dp"
-        android:layout_marginBottom="39dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="55dp"
         android:text="placeholder"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewQ"
-        app:layout_constraintStart_toStartOf="@+id/priceTextView"
-        app:layout_constraintTop_toTopOf="@+id/textViewSQ" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/priceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginTop="21dp"
         android:text="placeholder"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="@+id/button3" />
+        app:layout_constraintStart_toStartOf="@+id/category"
+        app:layout_constraintTop_toBottomOf="@+id/category" />
 
     <TextView
         android:id="@+id/textViewQ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="87dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginBottom="39dp"
         android:text="0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
-        app:layout_constraintTop_toTopOf="@+id/textViewSQ" />
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintStart_toEndOf="@+id/buttonDelete"
+        app:layout_constraintTop_toTopOf="@+id/category" />
 
     <TextView
         android:id="@+id/textViewSQ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="83dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="176dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
