--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -68,12 +68,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnFinish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="33dp"
-        android:onClick="finish"
         android:text="@string/finish_order"
         app:layout_constraintEnd_toEndOf="@+id/editTextCCV"
         app:layout_constraintTop_toBottomOf="@+id/editTextCCV" />
