--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -7,20 +7,19 @@
     tools:context=".VerifyActivity">
 
     <Button
-        android:id="@+id/bVerify"
+        android:id="@+id/btnVerify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="123dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="122dp"
-        android:onClick="verify"
         android:text="@string/button_send_vemail"
-        app:layout_constraintBottom_toBottomOf="@+id/bAlready"
+        app:layout_constraintBottom_toBottomOf="@+id/btnAlready"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tVerify" />
 
     <Button
-        android:id="@+id/bAlready"
+        android:id="@+id/btnAlready"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
