--- a/app/src/main/res/layout/fragment_log_out.xml
+++ b/app/src/main/res/layout/fragment_log_out.xml
@@ -8,12 +8,11 @@
     tools:context=".LogOutFragment">
 
     <Button
-        android:id="@+id/bLogOut"
+        android:id="@+id/btnLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="140dp"
         android:layout_marginTop="312dp"
-        android:onClick="bLogOut"
         android:text="@string/log_out"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
